# cryptic-pocket-phd

./: .gitattributes  .gitignore  HANDOFF.md  OPERATIONAL_LOG.md  README.md  conftest.py  pyproject.toml  requirements-runpod.txt
configs/: phase0_proteins.yaml  phase1_sweep.yaml  task_a3_default.yaml  task_a3_split.json
data/: mdcath_metadata.csv
data/boltz_inputs/O74933/: O74933.yaml  O74933_A.a3m
data/boltz_inputs/P08709/: P08709.yaml  P08709_A.a3m
data/boltz_inputs/P0AG16/: P0AG16.yaml  P0AG16_A.a3m
data/boltz_inputs/P12758/: P12758.yaml  P12758_A.a3m
data/boltz_inputs/P26281/: P26281.yaml  P26281_A.a3m
data/boltz_inputs/P61586/: P61586.yaml  P61586_A.a3m
data/boltz_inputs/P62593/: P62593.yaml  P62593_A.a3m
data/boltz_inputs/P79345/: P79345.yaml  P79345_A.a3m
data/boltz_inputs/P9WPY3/: P9WPY3.yaml  P9WPY3_A.a3m
data/boltz_inputs/Q02763/: Q02763.yaml  Q02763_A.a3m
data/inputs/: P62593_TEM1.fasta  P62593_TEM1.yaml
data/inputs/msa/: P62593_TEM1_0.a3m
data/md_frames/1cpoA00/: metadata.json
data/md_frames/1dceA02/: metadata.json
data/md_frames/1e7pC00/: metadata.json
data/md_frames/1gotG00/: metadata.json
data/md_frames/1guxB00/: metadata.json
data/md_frames/1gyzA00/: metadata.json
data/md_frames/1hn0A02/: metadata.json
data/md_frames/1i19A01/: metadata.json
data/md_frames/1jjfA00/: metadata.json
data/md_frames/1k32A02/: metadata.json
data/md_frames/1kgyA00/: metadata.json
data/md_frames/1nyaA00/: metadata.json
data/md_frames/1pgl100/: metadata.json
data/md_frames/1q7fB00/: metadata.json
data/md_frames/1qsaA01/: metadata.json
data/md_frames/1r6aA00/: metadata.json
data/md_frames/1rmgA00/: metadata.json
data/md_frames/1sk7A00/: metadata.json
data/md_frames/1tvsA00/: metadata.json
data/md_frames/1ulvA01/: metadata.json
data/md_frames/1v6sA01/: metadata.json
data/md_frames/1vi7A02/: metadata.json
data/md_frames/1w4tA02/: metadata.json
data/md_frames/1xfxA01/: metadata.json
data/md_frames/1y0gA00/: metadata.json
data/md_frames/2c0hA00/: metadata.json
data/md_frames/2cp6A01/: metadata.json
data/md_frames/2dqlA00/: metadata.json
data/md_frames/2fboJ02/: metadata.json
data/md_frames/2ix0A02/: metadata.json
data/md_frames/2jigA01/: metadata.json
data/md_frames/2kzvA01/: metadata.json
data/md_frames/2lp7A00/: metadata.json
data/md_frames/2m4lA00/: metadata.json
data/md_frames/2mmbA00/: metadata.json
data/md_frames/2ve7C01/: metadata.json
data/md_frames/2wocA00/: metadata.json
data/md_frames/2yugA00/: metadata.json
data/md_frames/3af5A02/: metadata.json
data/protein_lists/: pod1_gpu0.txt  pod1_gpu1.txt  pod2_gpu0.txt  pod2_gpu1.txt  selection_report.md  task_a1_stratified_120.txt
docs/: SPEC_00_pocketminer_noise_sanity.md  WRAPPER_VALIDATION.md  phase1_results.md
docs/research/: lewis_benchmark_notes.md
logs/: training_log.jsonl
models/: pocketminer_torch.pt
results/: task_a1_complete.md  task_a3_results.md
results/phase0_runpod/: phase1_manifest.csv
results/phase1_baseline/: phase1_sweep.csv
results/phase1_sweep_gpu0/: phase1_sweep.csv
results/phase1_sweep_gpu1/: phase1_sweep.csv
scripts/: checkpoint_push.sh  compute_ligsite_labels.py  download_md_data.py  download_mdcath_direct.py  download_pocketminer_weights.sh  generate_boltz_intermediates.py  generate_protein_metadata.py  get_cath_labels.py  hf_upload_metadata.py  hf_upload_task_a1.py  monitor_sweep.py  pipeline_download_preprocess.py  preprocess_md_to_frames.py  run_phase0.py  run_phase0.sh  run_phase0_boltz.py  run_phase0_pocketminer.py  run_phase1.py  run_phase1_sweep.py  run_task_de_gpu.sh  runpod_setup.sh  sanity_check_backbone.py  select_stratified_proteins.py  select_training_proteins.py  sequence_identity_split.py  setup_runpod.sh  test_pipeline_synthetic.py  train_noise_aware_pocketminer.py  validate_pocketminer_port.py
src/cryptic_pocket_phd/: __init__.py  boltz_to_pdb.py  correlation.py  datasets.py  fpocket_wrapper.py  guidance_injection.py  intermediate_capture.py  ligsite.py  pocket_potential.py  pocketminer_noise_aware.py  pocketminer_torch.py  pocketminer_wrapper.py  residue_mapping.py
tests/: test_correlation_toy.py  test_fpocket_wrapper.py  test_intermediate_capture.py  test_pocketminer_noise_aware.py  test_pocketminer_wrapper.py  test_residue_indexing_missing_density.py  test_residue_mapping.py
(+32 files in other folders)
