[project]
name = "cryptic-pocket-phd"
version = "0.1.0"
description = "PocketMiner-guided diffusion for cryptic pockets"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "biopython",
    "wandb",
    "matplotlib",
    "seaborn",
    "pyyaml",
    "requests",
    "tqdm",
    # Boltz-1: pinned to exact commit used when writing InstrumentedDiffusionModule.
    # intermediate_capture.py copies sample() from this commit verbatim (+ hook).
    # To upgrade: diff upstream sample() against our copy before bumping this hash.
    "boltz @ git+https://github.com/jwohlwend/boltz.git@cb04aeccdd480fd4db707f0bbafde538397fa2ac",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ipython",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cryptic_pocket_phd"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-cov",
]
