[project]
name = "cryptic-pocket-phd"
version = "0.1.0"
description = "PocketMiner-guided diffusion for cryptic pockets"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "biopython",
    "wandb",
    "matplotlib",
    "seaborn",
    "pyyaml",
    "requests",
    "tqdm",
    # TensorFlow + mdtraj: required for PocketMiner inference.
    # TF 2.15 max supports Python 3.11; Python 3.12 requires TF 2.16+.
    # TF 2.16 uses Keras 3 by default — pocketminer_wrapper patches the import
    # with tf_keras for backwards compatibility if needed.
    "tensorflow>=2.16",
    "tf-keras",  # legacy Keras 2 API under tf_keras (shim for TF 2.16+)
    "mdtraj>=1.9.7",
    # Boltz-1: pinned to exact commit used when writing InstrumentedDiffusionModule.
    # intermediate_capture.py copies sample() from this commit verbatim (+ hook).
    # To upgrade: diff upstream sample() against our copy before bumping this hash.
    "boltz @ git+https://github.com/jwohlwend/boltz.git@cb04aeccdd480fd4db707f0bbafde538397fa2ac",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ipython",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cryptic_pocket_phd"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
markers = [
    "integration: requires TF + mdtraj + PocketMiner weights (run on GPU machine)",
]
