[project]
name = "cryptic-pocket-phd"
version = "0.1.0"
description = "PocketMiner-guided diffusion for cryptic pockets"
requires-python = ">=3.11"

dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "biopython",
    "wandb",
    "matplotlib",
    "seaborn",
    "pyyaml",
    "requests",
    "tqdm",
    # TensorFlow + mdtraj: required for PocketMiner inference.
    # Pinned to exact working versions verified 2026-05-10.
    # TF 2.16+ uses Keras 3 by default; tf-keras provides legacy Keras 2 API.
    # To upgrade: run integration tests first, bump all three together.
    "tensorflow==2.18.1",
    "tf-keras==2.18.0",  # legacy Keras 2 API under tf_keras (shim for TF 2.16+)
    "mdtraj==1.11.0",
    # Boltz-1: pinned to exact commit used when writing InstrumentedDiffusionModule.
    # intermediate_capture.py copies sample() from this commit verbatim (+ hook).
    # To upgrade: diff upstream sample() against our copy before bumping this hash.
    "boltz @ git+https://github.com/jwohlwend/boltz.git@cb04aeccdd480fd4db707f0bbafde538397fa2ac",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ipython",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cryptic_pocket_phd"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
markers = [
    "integration: requires TF + mdtraj + PocketMiner weights (run on GPU machine)",
    "requires_cache: requires Boltz CCD cache (~2 GB download); skip locally unless cache present",
]
